--- a/lab1/index.html
+++ b/lab1/index.html
@@ -4,24 +4,29 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Лабораторная работа 2</title>
+        <title>Основная страница</title>
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>            
         <div class="header">
             <h1>Это моя первая HTML страница</h1>
+            <div class="navigation">
+                <a href="index.html" target="_self">Основная страница</a>
+                <a href="page2.html" target="_self">Позиционирование элементов</a>
+            </div>
+            
         </div>
         <hr>
         <div class="content">
             <div class="content-left">
                 <div class="aboutMe">
                     <h1>О себе</h1>
-                    <p class="bornPlace"><b>waas</b> <i>born</i> <del>on</del> in <tt>Russian Federation</tt>.</p>
+                    <p><b>waas</b> <i>born</i> <del>on</del> in <tt>Russian Federation</tt>.</p>
                 </div>
 
                 <div class = "favoriteFilms">
                     <h2>Какие жанры фильмов мне нравятся:</h2>
-                    <ul class="favoriteFilmsList">
+                    <ul>
                         <li>биографические</li>
                         <li>хорроры</li>
                         <li>триллеры</li>
@@ -31,14 +36,14 @@
 
                 <div class="favoriteMusic">
                     <h2>Какая музыка мне нравится:</h2>
-                    <ol class="favoriteMusicList">
+                    <ol>
                         <li>почти любая</li>
                     </ol>
                 </div>
                 
                 <div class="myLinks">
                     <h2>как связаться со мной:</h2>
-                    <a class ="telega" href="https://t.me/nineteenzz">tg</a>
+                    <a href="https://t.me/nineteenzz">tg</a>
                     <br><br>
                 </div>
             </div>
