структурирование проекта, разбиение по папкам

--- a/lab1/index.html
+++ b/lab1/index.html
@@ -5,14 +5,14 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Основная страница</title>
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="css/style.css" />
     </head>
     <body>            
         <div class="header">
             <h1>Это моя первая HTML страница</h1>
             <div class="navigation">
                 <a href="index.html" target="_self">Основная страница</a>
-                <a href="page2.html" target="_self">Позиционирование элементов</a>
+                <a href="page2/index.html" target="_self">Позиционирование элементов</a>
             </div>
             
         </div>
