--- a/lab1/page2/index.html
+++ b/lab1/page2/index.html
@@ -5,14 +5,14 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Позиционирование элементов</title>
-        <link rel="stylesheet" href="style.css"/>
+        <link rel="stylesheet" href="../css/style.css" />
     </head>
     <body>
         <div class="header">
             <h1>Это моя вторая HTML страница</h1>
             <div class="navigation">
-                <a href="index.html" target="_self">Основная страница</a>
-                <a href="page2.html" target="_self">Позиционирование элементов</a>
+                <a href="../index.html" target="_self">Основная страница</a>
+                <a href="index.html" target="_self">Позиционирование элементов</a>
             </div>
         </div>
         <hr>
@@ -20,7 +20,7 @@
         <h1>Горизонтальное позиционирование</h1>
         <div class="container">
             <div class="block"></div>
-            <img src="images/sky.jpg" alt="ошибка загрузки">
+            <img src="../images/sky.jpg" alt="ошибка загрузки">
         </div>
 
         <h1>Вертикальное позиционирование</h1>        
@@ -51,7 +51,7 @@
 
         <img 
             class="fixedCat"
-            src="images/cat2.jpg" 
+            src="../images/cat2.jpg"
             alt="ошибка загрузки"
         >
     </body>
