--- a/lab1/index.html
+++ b/lab1/index.html
@@ -13,6 +13,7 @@
             <div class="navigation">
                 <a href="index.html" target="_self">Основная страница</a>
                 <a href="page2/index.html" target="_self">Позиционирование элементов</a>
+                <a href="page3 table/index.html" target="_self">Таблица</a>
             </div>
             
         </div>
