--- a/bootstrap.lab6,7/films/index.html
+++ b/bootstrap.lab6,7/films/index.html
@@ -7,10 +7,13 @@
     <title>Робин Уильямс</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
 </head>
+
+
+
 <body>
-    <nav class="navbar navbar-expand-sm navbar-dark fixed-top bg-dark">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="https://www.kinopoisk.ru/name/20087/">Робин Уильямс</a>
             <ul class="navbar-nav">
@@ -24,21 +27,238 @@
         </div>
     </nav>
 
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 colinfo" style="border: 1px solid black;">
+                <p>Дата рождения: 21 июля 1951г.</p>
+                <p>Дата смерти: 11 августа 2014г.</p>
+                <p>В скольких фильмах снялся: 380</p>
+                <p>Жанры фильмов: комедия, драма, семейный</p>
+            </div>
 
-    <div class="alert alert-warning">
-        <strong>Внимание!</strong> Эта страница находится в разработке.
+            <div class="col-md-6">
+                <div class="card" style="width:400px; ">
+                    <img
+                    src="../images/rw4.jpg"
+                    alt="rw4.jpg"
+                    style="border: 2px solid rgb(0, 0, 0)"
+                    />
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="alert alert-warning">
-        <strong>Внимание!</strong> Эта страница находится в разработке.
+
+    <div class="container-fluid">
+        <h1>Лучшие фильмы</h1>
+        <div class="row">
+            <div class="col-lg-3">
+                <div class="card" style="width:400px">
+                    <img
+                        class="card-img-top"
+                        src="../images/film1.jpg"
+                        alt="filmPoster"
+                        style="width:100%"
+                    />
+                    <div class="card-body">
+                        <h4 class="card-title">Доброе утро, Вьетнам</h4>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3">
+                <div class="card" style="width:400px">
+                    <img
+                        class="card-img-top"
+                        src="../images/film2.jpg"
+                        alt="filmPoster"
+                        style="width:100%"
+                    />
+                    <div class="card-body">
+                        <h4 class="card-title">Общество мертвых поэтов</h4>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3">
+                <div class="card" style="width:400px">
+                    <img
+                        class="card-img-top"
+                        src="../images/film3.jpg"
+                        alt="filmPoster"
+                        style="width:100%"
+                    />
+                    <div class="card-body">
+                        <h4 class="card-title">Умница Уилл Хантинг</h4>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3">
+                <div class="card" style="width:400px">
+                    <img
+                        class="card-img-top"
+                        src="../images/film4.jpg"
+                        alt="filmPoster"
+                        style="width:100%"
+                    />
+                    <div class="card-body">
+                        <h4 class="card-title">Куда приводят мечты</h4>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3">
+                <div class="card" style="width:400px">
+                    <img
+                        class="card-img-top"
+                        src="../images/film5.jpg"
+                        alt="filmPoster"
+                        style="width:100%"
+                    />
+                    <div class="card-body">
+                        <h4 class="card-title">Искусственный разум</h4>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3">
+                <div class="card" style="width:400px">
+                    <img
+                        class="card-img-top"
+                        src="../images/film6.jpg"
+                        alt="filmPoster"
+                        style="width:100%"
+                    />
+                    <div class="card-body">
+                        <h4 class="card-title">Двухсотлетний человек</h4>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3">
+                <div class="card" style="width:400px">
+                    <img
+                        class="card-img-top"
+                        src="../images/film7.jpg"
+                        alt="filmPoster"
+                        style="width:100%"
+                    />
+                    <div class="card-body">
+                        <h4 class="card-title">Пробуждение</h4>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3">
+                <div class="card" style="width:400px">
+                    <img
+                        class="card-img-top"
+                        src="../images/film8.jpg"
+                        alt="filmPoster"
+                        style="width:100%"
+                    />
+                    <div class="card-body">
+                        <h4 class="card-title">Август Раш</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="alert alert-warning">
-        <strong>Внимание!</strong> Эта страница находится в разработке.
+
+    <div class="container-fluid">
+        <h1>Интересные факты</h1>
+        <div class="row">
+            <div class="col-md-3">
+                <div class="card">
+                    <div class="card-body">
+                        Эта карточка видна на всех экранах.
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 d-none d-xl-block">
+                <div class="card">
+                    <div class="card-body">
+                        Эта карточка скрыта на экранах меньше xl.
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 d-none d-lg-block">
+                <div class="card">
+                    <div class="card-body">
+                        Эта карточка скрыта на экранах меньше lg.
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 d-none d-md-block">
+                <div class="card">
+                    <div class="card-body">
+                        Эта карточка скрыта на экранах меньше md.
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 d-none d-sm-block">
+                <div class="card">
+                    <div class="card-body">
+                        Эта карточка скрыта на экранах меньше sm.
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 d-block d-sm-none">
+                <div class="card">
+                    <div class="card-body">
+                        Эта карточка видна только на экранах xs.
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="alert alert-warning">
-        <strong>Внимание!</strong> Эта страница находится в разработке.
-    </div>
-    <div class="alert alert-warning">
-        <strong>Внимание!</strong> Эта страница находится в разработке.
+
+    <div class="container-fluid tablefilms">
+        <h1>Фильмография</h1>
+
+        <table class="table table-light">
+            <thead class="table-dark">
+                <tr>
+                    <th scope="col">Год</th>
+                    <th scope="col">Русское название</th>
+                    <th scope="col">Оригинальное название</th>
+                    <th scope="col">Роль</th>
+                </tr>
+            </thead>
+
+            <tbody>
+                <tr>
+                    <th scope="row">1989</th>
+                    <td>Общество мертвых поэтов</td>
+                    <td>Dead Poets Society</td>
+                    <td>John Keating</td>
+                </tr>
+                <tr>
+                    <th scope="row">1997</th>
+                    <td>Умница Уилл Хантинг</td>
+                    <td>Good Will Hunting</td>
+                    <td>Sean</td>
+                </tr>
+                <tr>
+                    <th scope="row">1998</th>
+                    <td>Куда приводят мечты</td>
+                    <td>What Dreams May Come</td>
+                    <td>Chris Nielsen</td>
+                </tr>
+                <tr>
+                    <th scope="row">1999</th>
+                    <td>Двухсотлетний человек</td>
+                    <td>Bicentennial Man</td>
+                    <td>Andrew</td>
+                </tr>
+                <tr>
+                    <th scope="row">2001</th>
+                    <td>Искусственный разум</td>
+                    <td>Artificial Intelligence: AI</td>
+                    <td>Dr. Know</td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 </body>
 </html>
