--- a/bootstrap.lab6,7/index.html
+++ b/bootstrap.lab6,7/index.html
@@ -9,6 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="css/style.css" />
 </head>
+
 <body data-bs-spy="scroll" data-bs-target=".navbarleft" data-bs-offset="50">
     <nav class="navbar navbar-expand-sm navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
@@ -23,7 +24,6 @@
             </ul>
         </div>
     </nav>
-
     <nav class="navbar navbar-dark bg-dark navbarleft">
         <div class="container-fluid">
             <ul class="navbar-nav">
@@ -68,8 +68,8 @@
         </div>
         
         <div id="filmography" class="container">
-            <div class="row row-cols-3">
-                <div class="col">
+            <div class="row">
+                <div class="col-sm-4">
                     <div class="card" style="width:400px">
                         <img
                             class="card-img-top"
@@ -88,7 +88,7 @@
                     </div>
                 </div>
 
-                <div class="col">
+                <div class="col-sm-4">
                     <div class="card" style="width:400px">
                         <img
                             class="card-img-top"
@@ -108,7 +108,7 @@
                     </div>
                 </div>
 
-                <div class="col">
+                <div class="col-sm-4">
                     <div class="card" style="width:400px">
                         <img
                             class="card-img-top"
